--- a/css/styles.css
+++ b/css/styles.css
@@ -322,8 +322,7 @@ footer ul a:hover {
 }
 
 /*===== Media queries (Tablet) =====*/
-@media screen and (max-width: 1024px) {
-  /*== Estilos generales ==*/
+@media screen and (max-width: 992px) {
   .contenedor {
     width: var(--contenedor-width-2);
   }
@@ -336,7 +335,7 @@ footer ul a:hover {
   h5 {
     font-size: 0.8rem;
   }
-  /*== Nav ==*/
+
   nav button {
     display: inline-block;
     font-size: 1.5rem;
@@ -363,6 +362,7 @@ footer ul a:hover {
     justify-content: center;
     gap: 0;
     display: none;
+    perspective: 300px;
   }
 
   .nav__items li {
@@ -371,8 +371,34 @@ footer ul a:hover {
     display: flex;
     align-items: center;
     background: var(--color-marron-1);
-    box-shadow: -2rem 3rem 7rem rgba(0, 0, 0, 0.7);
+    box-shadow: -1rem 3rem 8rem rgba(0, 0, 0, 0.6);
     border-top: 1px solid var(--color-bg);
+    animation: animarNavResponsive 300ms 0s ease forwards;
+    opacity: 0;
+    transform-origin: top;
+  }
+
+  .nav__items li:nth-child(2) {
+    animation-delay: 100ms;
+  }
+  .nav__items li:nth-child(3) {
+    animation-delay: 200ms;
+  }
+  .nav__items li:nth-child(4) {
+    animation-delay: 300ms;
+  }
+  .nav__items li:nth-child(5) {
+    animation-delay: 400ms;
+  }
+
+  @keyframes animarNavResponsive {
+    0% {
+      transform: rotateX(90deg);
+    }
+    100% {
+      transform: rotateX(0deg);
+      opacity: 1;
+    }
   }
 
   .nav__items li a {
@@ -404,5 +430,41 @@ footer ul a:hover {
 
   .nav__perfil ul li:first-child a {
     background: var(--color-primario-light);
+  }
+
+  .destacado__contenedor {
+    gap: 3rem;
+  }
+
+  .posts__contenedor {
+    grid-template-columns: 1fr 1fr;
+    gap: 3rem;
+  }
+}
+
+/*===== Media queries (Smartphone) =====*/
+@media screen and (max-width: 576px) {
+  section {
+    margin-top: 2rem;
+  }
+
+  h1 {
+    font-size: 2rem;
+  }
+
+  .destacado__contenedor {
+    grid-template-columns: 1fr;
+    gap: 0.5rem;
+  }
+
+  .posts__contenedor {
+    grid-template-columns: 1fr;
+  }
+
+  .footer__contenedor {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 2rem;
+    text-align: center;
   }
 }
