Primer diseño del front-end

--- a/css/styles.css
+++ b/css/styles.css
@@ -4,9 +4,9 @@
   --color-primario-light: hsla(25, 12%, 53%, 0.384);
   --color-primario-alt: hsl(26, 7%, 39%);
   --color-rojo: hsl(346, 87%, 46%);
-  --color-rojo-light: hsl(346, 87%, 46%, 15%);
+  --color-rojo-light: hsla(346, 87%, 46%, 0.154);
   --color-verde: #00c476;
-  --color-verde-light: hsl(156, 100%, 38%, 15%);
+  --color-verde-light: hsla(156, 100%, 38%, 0.158);
   --color-marron-1: hsl(18, 13%, 40%);
   --color-marron-2: hsl(17, 18%, 31%);
   --color-marron-3: hsla(39, 19%, 38%, 0.3);
@@ -38,6 +38,7 @@
   appearance: 0;
   list-style: none;
   text-decoration: none;
+  box-sizing: border-box;
 }
 
 body {
@@ -141,7 +142,7 @@ nav button {
   position: absolute;
   display: flex;
   flex-direction: column;
-  top: 125%;
+  top: 140%;
   right: 0;
   box-shadow: 0 1rem 1rem rgba(0, 0, 0, 0.2);
   visibility: hidden;
@@ -194,8 +195,8 @@ nav button {
 /*===== Posts general =====*/
 
 .post__thumbnail {
-  border-radius: var(--radius-5) 0;
-  border: 1rem solid var(--color-marron-3);
+  border-radius: var(--radius-2);
+  border: 0.5rem solid var(--color-primario);
   overflow: hidden;
   margin-bottom: 1.6rem;
 }
@@ -321,8 +322,231 @@ footer ul a:hover {
   margin-top: 5rem;
 }
 
+/*===== Búsqueda =====*/
+.busqueda__barra {
+  margin-top: 8rem;
+}
+
+.busqueda__barra-contenedor {
+  position: relative;
+  width: 50%;
+  background: var(--color-primario-light);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  overflow: hidden;
+  padding: 0.5rem 1rem;
+  border-radius: var(--radius-2);
+}
+
+.busqueda__barra-contenedor > div {
+  width: 100%;
+  display: flex;
+  align-items: center;
+}
+
+.busqueda__barra input {
+  margin-left: 0.8rem;
+  background: transparent;
+  padding: 0.5rem 0;
+  width: 100%;
+}
+
+/*===== Botones =====*/
+.btn {
+  display: inline-block;
+  width: fit-content;
+  padding: 0.5rem 1.2rem;
+  border-radius: var(--radius-2);
+  cursor: pointer;
+  background-color: var(--color-primario);
+  transition: var(--transition);
+  color: var(--color-blanco);
+}
+
+.btn:hover,
+.btn.rojo:hover {
+  background-color: var(--color-blanco);
+  color: var(--color-marron-1);
+}
+
+.btn.mini {
+  padding: 0.3rem 0.7rem;
+  font-size: 0.8rem;
+}
+
+.btn.rojo {
+  background-color: var(--color-rojo);
+  color: var(--color-blanco);
+}
+
+/*===== Post.html =====*/
+.post-full {
+  margin: 8rem 0 2rem;
+}
+
+.post-full__contenedor {
+  width: var(--form-width);
+  background: var(--color-marron-3);
+  padding: 2rem 3rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.post-full__contenedor .post__autor {
+  margin: 0;
+}
+
+/*===== Pagina vacía =====*/
+.pagina__vacia {
+  height: 30rem;
+  display: flex;
+  margin-top: 4.5rem;
+  background-color: var(--color-marron-3);
+  justify-content: center;
+  align-items: center;
+}
+
+/*===== Header de categorías =====*/
+.categoria__titulo {
+  height: 15rem;
+  margin-top: 4.5rem;
+  background-color: var(--color-marron-3);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+/*===== Formularios =====*/
+.form__seccion {
+  display: flex;
+  justify-content: center;
+  margin: 5rem 0;
+}
+
+.form__seccion-contenedor {
+  width: var(--form-width);
+}
+
+.mensaje__alerta {
+  background-color: var(--color-rojo);
+  padding: 0.8rem 1.5rem;
+  margin: 0.8rem 0;
+  border-radius: var(--radius-2);
+  width: fit-content;
+}
+
+.mensaje__alerta.error {
+  background: var(--color-rojo-light);
+  color: var(--color-blanco);
+}
+
+.mensaje__alerta.ok {
+  background: var(--color-verde-light);
+  color: var(--color-blanco);
+}
+
+.formulario {
+  display: flex;
+  flex-direction: column;
+  gap: 1.3rem;
+}
+
+input,
+textarea,
+select {
+  padding: 0.8rem 1.2rem;
+  background-color: var(--color-primario-light);
+  border-radius: var(--radius-1);
+  color: var(--color-blanco);
+}
+
+textarea::placeholder,
+input::placeholder {
+  color: var(--color-marron-4);
+}
+
+.form__subir {
+  display: flex;
+  flex-direction: column;
+  gap: 0.4rem;
+}
+
+.form__marcar {
+  display: flex;
+  gap: 0.4rem;
+}
+
+select option {
+  background-color: var(--color-marron-4);
+  color: var(--color-marron-2);
+}
+
+/*===== Panel =====*/
+.panel {
+  margin: 8rem 0 5rem;
+}
+
+.panel__contenedor {
+  display: flex;
+  gap: 4rem;
+  background-color: var(--color-marron-1);
+  padding: 2rem;
+  width: 50%;
+  overflow: hidden;
+}
+
+.panel__contenedor aside {
+  width: 15rem;
+  border: 1px solid white;
+  height: 100%;
+}
+
+.panel__contenedor aside a {
+  background-color: var(--color-primario);
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  padding: 1rem;
+  transition: var(--transition);
+}
+
+.panel__contenedor aside a:hover {
+  background-color: var(--color-marron-1);
+}
+
+.panel__contenedor aside ul li:not(:last-child) a {
+  border-bottom: 1px solid var(--color-marron-2);
+}
+
+.panel__contenedor aside a.activo {
+  background-color: var(--color-marron-2);
+}
+
+.panel__contenedor main table {
+  width: 100%;
+  text-align: center;
+}
+
+.panel__contenedor main table th {
+  padding: 0.8rem;
+  background: var(--color-primario-light);
+  color: var(--color-blanco);
+}
+
+.panel__contenedor main table td {
+  padding: 0.8rem;
+  border-bottom: 1px solid var(--color-blanco);
+}
+
+.panel__contenedor main table tr:hover td {
+  background-color: hsla(25, 12%, 53%, 0.159);
+}
+
 /*===== Media queries (Tablet) =====*/
 @media screen and (max-width: 992px) {
+  /*===== General =====*/
   .contenedor {
     width: var(--contenedor-width-2);
   }
@@ -336,6 +560,7 @@ footer ul a:hover {
     font-size: 0.8rem;
   }
 
+  /*===== Nav =====*/
   nav button {
     display: inline-block;
     font-size: 1.5rem;
@@ -432,13 +657,66 @@ footer ul a:hover {
     background: var(--color-primario-light);
   }
 
+  /*===== Destacado =====*/
   .destacado__contenedor {
     gap: 3rem;
   }
 
+  /*===== Sección posts =====*/
   .posts__contenedor {
     grid-template-columns: 1fr 1fr;
     gap: 3rem;
+  }
+  /*===== Formularios =====*/
+  .form__seccion-contenedor {
+    padding: 3rem;
+    font-size: 1.5rem;
+  }
+
+  .form__seccion-contenedor input,
+  label,
+  .btn,
+  textarea,
+  select {
+    font-size: 1.2rem;
+  }
+  /*===== Panel =====*/
+  .panel__contenedor {
+    gap: 1rem;
+  }
+  .panel__contenedor aside {
+    width: 4rem;
+    background-color: var(--color-primario);
+  }
+
+  .panel__contenedor aside a h5 {
+    display: none;
+  }
+
+  .panel__contenedor main {
+    overflow: hidden;
+  }
+
+  .panel__contenedor main thead {
+    display: none;
+  }
+
+  .panel__contenedor main tr {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+  }
+
+  .panel__contenedor main tr td {
+    padding: 1rem 0 1rem;
+    border-width: 0;
+  }
+  .panel__contenedor main tr {
+    margin-right: 1rem;
+    border-bottom: 1px solid var(--color-blanco);
+  }
+  .panel__contenedor main table tr:hover td {
+    background: transparent;
   }
 }
 
@@ -466,5 +744,29 @@ footer ul a:hover {
     grid-template-columns: 1fr 1fr;
     gap: 2rem;
     text-align: center;
+  }
+
+  /*===== Blog =====*/
+  .busqueda__barra-contenedor {
+    width: var(--contenedor-width-2);
+  }
+
+  /*===== Post.html =====*/
+  .post-full__contenedor {
+    padding: 0;
+    background: transparent;
+    gap: 2rem;
+  }
+  /*===== Formularios =====*/
+  .form__seccion-contenedor {
+    padding: 0rem;
+    font-size: 1rem;
+  }
+
+  .form__seccion-contenedor input,
+  label,
+  .btn,
+  textarea {
+    font-size: 1rem;
   }
 }
