--- a/css/styles.css
+++ b/css/styles.css
@@ -99,8 +99,8 @@ a {
 
 img {
   display: block;
-  width: 100%;
   object-fit: cover;
+  width: 100%;
 }
 
 /*=====Nav=====*/
@@ -176,6 +176,15 @@ nav button {
   border-radius: 50%;
   overflow: hidden;
   border: 0.3rem solid var(--color-blanco);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.avatar img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 /*===== Tag de categoría =====*/
@@ -268,7 +277,7 @@ footer {
   box-shadow: inset 0 1.5rem 1.5rem rgba(0, 0, 0, 0.2);
 }
 
-.footer__redes {
+.footer_redes {
   margin-inline: auto;
   width: fit-content;
   margin-bottom: 5rem;
