Páginas gestionar y editar usuarios

--- a/css/styles.css
+++ b/css/styles.css
@@ -503,6 +503,9 @@ select option {
 /*===== Panel =====*/
 .panel {
   margin: 8rem 0 5rem;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 }
 
 .panel__contenedor {
