--- a/css/styles.css
+++ b/css/styles.css
@@ -277,7 +277,7 @@ footer {
   box-shadow: inset 0 1.5rem 1.5rem rgba(0, 0, 0, 0.2);
 }
 
-.footer_redes {
+.footer__redes {
   margin-inline: auto;
   width: fit-content;
   margin-bottom: 5rem;
