--- a/css/styles.css
+++ b/css/styles.css
@@ -212,6 +212,14 @@ nav button {
   border: 0.5rem solid var(--color-primario);
   overflow: hidden;
   margin-bottom: 1.6rem;
+  width: 300px;
+  height: 200px;
+}
+
+.post__thumbnail img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
 }
 
 .post:hover .post__thumbnail img {
@@ -232,6 +240,12 @@ nav button {
   overflow: hidden;
 }
 
+.post__autor-avatar img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
 /*===== Post destacado =====*/
 .destacado {
   margin-top: 8rem;
@@ -244,7 +258,8 @@ nav button {
 }
 
 .destacado .post__thumbnail {
-  height: fit-content;
+  height: 400px;
+  width: 600px;
 }
 
 /*===== Sección posts =====*/
@@ -737,6 +752,11 @@ select option {
   }
   .panel__contenedor main table tr:hover td {
     background: transparent;
+  }
+  .destacado .post__thumbnail {
+    height: 200px;
+    width: 300px;
+    align-self: center;
   }
 }
 
